lab3/parser.out
Grammar:

Rule 0     S' -> instructions_opt
Rule 1     instructions_opt -> <empty>
Rule 2     instructions_opt -> instructions
Rule 3     instructions -> instruction
Rule 4     instructions -> instructions instruction
Rule 5     instruction -> assignment SEMICOLON
Rule 6     instruction -> FOR ID EQUALS expr COLON expr instruction
Rule 7     instruction -> WHILE LPAREN expr RPAREN instruction
Rule 8     instruction -> IF LPAREN expr RPAREN instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF LPAREN expr RPAREN instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> LBRACE instructions RBRACE
Rule 11    instruction -> CONTINUE SEMICOLON
Rule 12    instruction -> BREAK SEMICOLON
Rule 13    instruction -> RETURN expr SEMICOLON
Rule 14    instruction -> PRINT elements SEMICOLON
Rule 15    assignment -> ID LBRACKET elements RBRACKET assign expr
Rule 16    assignment -> ID assign expr
Rule 17    expr -> expr TRANSPOSE
Rule 18    expr -> vector
Rule 19    expr -> MINUS expr  [precedence=right, level=7]
Rule 20    expr -> ONES LPAREN elements RPAREN
Rule 21    expr -> ZEROS LPAREN elements RPAREN
Rule 22    expr -> EYE LPAREN elements RPAREN
Rule 23    expr -> ID
Rule 24    expr -> STRING
Rule 25    expr -> FLOATNUM
Rule 26    expr -> INTNUM
Rule 27    expr -> LPAREN expr RPAREN
Rule 28    expr -> expr DOTDIV expr  [precedence=left, level=6]
Rule 29    expr -> expr DOTMUL expr  [precedence=left, level=6]
Rule 30    expr -> expr DOTSUB expr  [precedence=left, level=5]
Rule 31    expr -> expr DOTADD expr  [precedence=left, level=5]
Rule 32    expr -> expr DIVIDE expr  [precedence=left, level=6]
Rule 33    expr -> expr MULTIPLY expr  [precedence=left, level=6]
Rule 34    expr -> expr MINUS expr  [precedence=left, level=5]
Rule 35    expr -> expr PLUS expr  [precedence=left, level=5]
Rule 36    expr -> expr GREATEROREQUAL expr  [precedence=nonassoc, level=4]
Rule 37    expr -> expr LESSOREQUAL expr  [precedence=nonassoc, level=4]
Rule 38    expr -> expr GREATER_THAN expr  [precedence=nonassoc, level=4]
Rule 39    expr -> expr LESS_THAN expr  [precedence=nonassoc, level=4]
Rule 40    expr -> expr NOTEQUAL expr  [precedence=nonassoc, level=3]
Rule 41    expr -> expr EQUAL expr  [precedence=nonassoc, level=3]
Rule 42    expr -> ID LBRACKET elements RBRACKET
Rule 43    assign -> DIVASSIGN
Rule 44    assign -> MULASSIGN
Rule 45    assign -> SUBASSIGN
Rule 46    assign -> ADDASSIGN
Rule 47    assign -> EQUALS
Rule 48    vector -> LBRACKET elements RBRACKET
Rule 49    elements -> expr
Rule 50    elements -> expr COMMA elements

Unused terminals:

    QUOTE

Terminals, with rules where they appear:

ADDASSIGN            : 46
BREAK                : 12
COLON                : 6
COMMA                : 50
CONTINUE             : 11
DIVASSIGN            : 43
DIVIDE               : 32
DOTADD               : 31
DOTDIV               : 28
DOTMUL               : 29
DOTSUB               : 30
ELSE                 : 8
EQUAL                : 41
EQUALS               : 6 47
EYE                  : 22
FLOATNUM             : 25
FOR                  : 6
GREATEROREQUAL       : 36
GREATER_THAN         : 38
ID                   : 6 15 16 23 42
IF                   : 8 9
INTNUM               : 26
LBRACE               : 10
LBRACKET             : 15 42 48
LESSOREQUAL          : 37
LESS_THAN            : 39
LPAREN               : 7 8 9 20 21 22 27
MINUS                : 19 34
MULASSIGN            : 44
MULTIPLY             : 33
NOTEQUAL             : 40
ONES                 : 20
PLUS                 : 35
PRINT                : 14
QUOTE                : 
RBRACE               : 10
RBRACKET             : 15 42 48
RETURN               : 13
RPAREN               : 7 8 9 20 21 22 27
SEMICOLON            : 5 11 12 13 14
STRING               : 24
SUBASSIGN            : 45
TRANSPOSE            : 17
WHILE                : 7
ZEROS                : 21
error                : 

Nonterminals, with rules where they appear:

assign               : 15 16
assignment           : 5
elements             : 14 15 20 21 22 42 48 50
expr                 : 6 6 7 8 9 13 15 16 17 19 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 49 50
instruction          : 3 4 6 7 8 8 9
instructions         : 2 4 10
instructions_opt     : 0
vector               : 18


state 0

    (0) S' -> . instructions_opt
    (1) instructions_opt -> .
    (2) instructions_opt -> . instructions
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . assignment SEMICOLON
    (6) instruction -> . FOR ID EQUALS expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE SEMICOLON
    (12) instruction -> . BREAK SEMICOLON
    (13) instruction -> . RETURN expr SEMICOLON
    (14) instruction -> . PRINT elements SEMICOLON
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    $end            reduce using rule 1 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instructions_opt               shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4

state 1

    (0) S' -> instructions_opt .


state 2

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (5) instruction -> . assignment SEMICOLON
    (6) instruction -> . FOR ID EQUALS expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE SEMICOLON
    (12) instruction -> . BREAK SEMICOLON
    (13) instruction -> . RETURN expr SEMICOLON
    (14) instruction -> . PRINT elements SEMICOLON
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    $end            reduce using rule 2 (instructions_opt -> instructions .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instruction                    shift and go to state 14
    assignment                     shift and go to state 4

state 3

    (3) instructions -> instruction .
    FOR             reduce using rule 3 (instructions -> instruction .)
    WHILE           reduce using rule 3 (instructions -> instruction .)
    IF              reduce using rule 3 (instructions -> instruction .)
    LBRACE          reduce using rule 3 (instructions -> instruction .)
    CONTINUE        reduce using rule 3 (instructions -> instruction .)
    BREAK           reduce using rule 3 (instructions -> instruction .)
    RETURN          reduce using rule 3 (instructions -> instruction .)
    PRINT           reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    RBRACE          reduce using rule 3 (instructions -> instruction .)


state 4

    (5) instruction -> assignment . SEMICOLON
    SEMICOLON       shift and go to state 15


state 5

    (6) instruction -> FOR . ID EQUALS expr COLON expr instruction
    ID              shift and go to state 16


state 6

    (15) assignment -> ID . LBRACKET elements RBRACKET assign expr
    (16) assignment -> ID . assign expr
    (43) assign -> . DIVASSIGN
    (44) assign -> . MULASSIGN
    (45) assign -> . SUBASSIGN
    (46) assign -> . ADDASSIGN
    (47) assign -> . EQUALS
    LBRACKET        shift and go to state 17
    DIVASSIGN       shift and go to state 19
    MULASSIGN       shift and go to state 20
    SUBASSIGN       shift and go to state 21
    ADDASSIGN       shift and go to state 22
    EQUALS          shift and go to state 23

    assign                         shift and go to state 18

state 7

    (7) instruction -> WHILE . LPAREN expr RPAREN instruction
    LPAREN          shift and go to state 24


state 8

    (8) instruction -> IF . LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> IF . LPAREN expr RPAREN instruction
    LPAREN          shift and go to state 25


state 9

    (10) instruction -> LBRACE . instructions RBRACE
    (3) instructions -> . instruction
    (4) instructions -> . instructions instruction
    (5) instruction -> . assignment SEMICOLON
    (6) instruction -> . FOR ID EQUALS expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE SEMICOLON
    (12) instruction -> . BREAK SEMICOLON
    (13) instruction -> . RETURN expr SEMICOLON
    (14) instruction -> . PRINT elements SEMICOLON
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instructions                   shift and go to state 26
    instruction                    shift and go to state 3
    assignment                     shift and go to state 4

state 10

    (11) instruction -> CONTINUE . SEMICOLON
    SEMICOLON       shift and go to state 27


state 11

    (12) instruction -> BREAK . SEMICOLON
    SEMICOLON       shift and go to state 28


state 12

    (13) instruction -> RETURN . expr SEMICOLON
    (17) expr -> . expr TRANSPOSE
    (18) expr -> . vector
    (19) expr -> . MINUS expr
    (20) expr -> . ONES LPAREN elements RPAREN
    (21) expr -> . ZEROS LPAREN elements RPAREN
    (22) expr -> . EYE LPAREN elements RPAREN
    (23) expr -> . ID
    (24) expr -> . STRING
    (25) expr -> . FLOATNUM
    (26) expr -> . INTNUM
    (27) expr -> . LPAREN expr RPAREN
    (28) expr -> . expr DOTDIV expr
    (29) expr -> . expr DOTMUL expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTADD expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr MULTIPLY expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr GREATEROREQUAL expr
    (37) expr -> . expr LESSOREQUAL expr
    (38) expr -> . expr GREATER_THAN expr
    (39) expr -> . expr LESS_THAN expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr EQUAL expr
    (42) expr -> . ID LBRACKET elements RBRACKET
    (48) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 29
    vector                         shift and go to state 30

state 13

    (14) instruction -> PRINT . elements SEMICOLON
    (49) elements -> . expr
    (50) elements -> . expr COMMA elements
    (17) expr -> . expr TRANSPOSE
    (18) expr -> . vector
    (19) expr -> . MINUS expr
    (20) expr -> . ONES LPAREN elements RPAREN
    (21) expr -> . ZEROS LPAREN elements RPAREN
    (22) expr -> . EYE LPAREN elements RPAREN
    (23) expr -> . ID
    (24) expr -> . STRING
    (25) expr -> . FLOATNUM
    (26) expr -> . INTNUM
    (27) expr -> . LPAREN expr RPAREN
    (28) expr -> . expr DOTDIV expr
    (29) expr -> . expr DOTMUL expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTADD expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr MULTIPLY expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr GREATEROREQUAL expr
    (37) expr -> . expr LESSOREQUAL expr
    (38) expr -> . expr GREATER_THAN expr
    (39) expr -> . expr LESS_THAN expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr EQUAL expr
    (42) expr -> . ID LBRACKET elements RBRACKET
    (48) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    elements                       shift and go to state 41
    expr                           shift and go to state 42
    vector                         shift and go to state 30

state 14

    (4) instructions -> instructions instruction .
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    LBRACE          reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    RBRACE          reduce using rule 4 (instructions -> instructions instruction .)


state 15

    (5) instruction -> assignment SEMICOLON .
    FOR             reduce using rule 5 (instruction -> assignment SEMICOLON .)
    WHILE           reduce using rule 5 (instruction -> assignment SEMICOLON .)
    IF              reduce using rule 5 (instruction -> assignment SEMICOLON .)
    LBRACE          reduce using rule 5 (instruction -> assignment SEMICOLON .)
    CONTINUE        reduce using rule 5 (instruction -> assignment SEMICOLON .)
    BREAK           reduce using rule 5 (instruction -> assignment SEMICOLON .)
    RETURN          reduce using rule 5 (instruction -> assignment SEMICOLON .)
    PRINT           reduce using rule 5 (instruction -> assignment SEMICOLON .)
    ID              reduce using rule 5 (instruction -> assignment SEMICOLON .)
    $end            reduce using rule 5 (instruction -> assignment SEMICOLON .)
    RBRACE          reduce using rule 5 (instruction -> assignment SEMICOLON .)
    ELSE            reduce using rule 5 (instruction -> assignment SEMICOLON .)


state 16

    (6) instruction -> FOR ID . EQUALS expr COLON expr instruction
    EQUALS          shift and go to state 43


state 17

    (15) assignment -> ID LBRACKET . elements RBRACKET assign expr
    (49) elements -> . expr
    (50) elements -> . expr COMMA elements
    (17) expr -> . expr TRANSPOSE
    (18) expr -> . vector
    (19) expr -> . MINUS expr
    (20) expr -> . ONES LPAREN elements RPAREN
    (21) expr -> . ZEROS LPAREN elements RPAREN
    (22) expr -> . EYE LPAREN elements RPAREN
    (23) expr -> . ID
    (24) expr -> . STRING
    (25) expr -> . FLOATNUM
    (26) expr -> . INTNUM
    (27) expr -> . LPAREN expr RPAREN
    (28) expr -> . expr DOTDIV expr
    (29) expr -> . expr DOTMUL expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTADD expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr MULTIPLY expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr GREATEROREQUAL expr
    (37) expr -> . expr LESSOREQUAL expr
    (38) expr -> . expr GREATER_THAN expr
    (39) expr -> . expr LESS_THAN expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr EQUAL expr
    (42) expr -> . ID LBRACKET elements RBRACKET
    (48) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    elements                       shift and go to state 44
    expr                           shift and go to state 42
    vector                         shift and go to state 30

state 18

    (16) assignment -> ID assign . expr
    (17) expr -> . expr TRANSPOSE
    (18) expr -> . vector
    (19) expr -> . MINUS expr
    (20) expr -> . ONES LPAREN elements RPAREN
    (21) expr -> . ZEROS LPAREN elements RPAREN
    (22) expr -> . EYE LPAREN elements RPAREN
    (23) expr -> . ID
    (24) expr -> . STRING
    (25) expr -> . FLOATNUM
    (26) expr -> . INTNUM
    (27) expr -> . LPAREN expr RPAREN
    (28) expr -> . expr DOTDIV expr
    (29) expr -> . expr DOTMUL expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTADD expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr MULTIPLY expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr GREATEROREQUAL expr
    (37) expr -> . expr LESSOREQUAL expr
    (38) expr -> . expr GREATER_THAN expr
    (39) expr -> . expr LESS_THAN expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr EQUAL expr
    (42) expr -> . ID LBRACKET elements RBRACKET
    (48) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 45
    vector                         shift and go to state 30

state 19

    (43) assign -> DIVASSIGN .
    MINUS           reduce using rule 43 (assign -> DIVASSIGN .)
    ONES            reduce using rule 43 (assign -> DIVASSIGN .)
    ZEROS           reduce using rule 43 (assign -> DIVASSIGN .)
    EYE             reduce using rule 43 (assign -> DIVASSIGN .)
    ID              reduce using rule 43 (assign -> DIVASSIGN .)
    STRING          reduce using rule 43 (assign -> DIVASSIGN .)
    FLOATNUM        reduce using rule 43 (assign -> DIVASSIGN .)
    INTNUM          reduce using rule 43 (assign -> DIVASSIGN .)
    LPAREN          reduce using rule 43 (assign -> DIVASSIGN .)
    LBRACKET        reduce using rule 43 (assign -> DIVASSIGN .)


state 20

    (44) assign -> MULASSIGN .
    MINUS           reduce using rule 44 (assign -> MULASSIGN .)
    ONES            reduce using rule 44 (assign -> MULASSIGN .)
    ZEROS           reduce using rule 44 (assign -> MULASSIGN .)
    EYE             reduce using rule 44 (assign -> MULASSIGN .)
    ID              reduce using rule 44 (assign -> MULASSIGN .)
    STRING          reduce using rule 44 (assign -> MULASSIGN .)
    FLOATNUM        reduce using rule 44 (assign -> MULASSIGN .)
    INTNUM          reduce using rule 44 (assign -> MULASSIGN .)
    LPAREN          reduce using rule 44 (assign -> MULASSIGN .)
    LBRACKET        reduce using rule 44 (assign -> MULASSIGN .)


state 21

    (45) assign -> SUBASSIGN .
    MINUS           reduce using rule 45 (assign -> SUBASSIGN .)
    ONES            reduce using rule 45 (assign -> SUBASSIGN .)
    ZEROS           reduce using rule 45 (assign -> SUBASSIGN .)
    EYE             reduce using rule 45 (assign -> SUBASSIGN .)
    ID              reduce using rule 45 (assign -> SUBASSIGN .)
    STRING          reduce using rule 45 (assign -> SUBASSIGN .)
    FLOATNUM        reduce using rule 45 (assign -> SUBASSIGN .)
    INTNUM          reduce using rule 45 (assign -> SUBASSIGN .)
    LPAREN          reduce using rule 45 (assign -> SUBASSIGN .)
    LBRACKET        reduce using rule 45 (assign -> SUBASSIGN .)


state 22

    (46) assign -> ADDASSIGN .
    MINUS           reduce using rule 46 (assign -> ADDASSIGN .)
    ONES            reduce using rule 46 (assign -> ADDASSIGN .)
    ZEROS           reduce using rule 46 (assign -> ADDASSIGN .)
    EYE             reduce using rule 46 (assign -> ADDASSIGN .)
    ID              reduce using rule 46 (assign -> ADDASSIGN .)
    STRING          reduce using rule 46 (assign -> ADDASSIGN .)
    FLOATNUM        reduce using rule 46 (assign -> ADDASSIGN .)
    INTNUM          reduce using rule 46 (assign -> ADDASSIGN .)
    LPAREN          reduce using rule 46 (assign -> ADDASSIGN .)
    LBRACKET        reduce using rule 46 (assign -> ADDASSIGN .)


state 23

    (47) assign -> EQUALS .
    MINUS           reduce using rule 47 (assign -> EQUALS .)
    ONES            reduce using rule 47 (assign -> EQUALS .)
    ZEROS           reduce using rule 47 (assign -> EQUALS .)
    EYE             reduce using rule 47 (assign -> EQUALS .)
    ID              reduce using rule 47 (assign -> EQUALS .)
    STRING          reduce using rule 47 (assign -> EQUALS .)
    FLOATNUM        reduce using rule 47 (assign -> EQUALS .)
    INTNUM          reduce using rule 47 (assign -> EQUALS .)
    LPAREN          reduce using rule 47 (assign -> EQUALS .)
    LBRACKET        reduce using rule 47 (assign -> EQUALS .)


state 24

    (7) instruction -> WHILE LPAREN . expr RPAREN instruction
    (17) expr -> . expr TRANSPOSE
    (18) expr -> . vector
    (19) expr -> . MINUS expr
    (20) expr -> . ONES LPAREN elements RPAREN
    (21) expr -> . ZEROS LPAREN elements RPAREN
    (22) expr -> . EYE LPAREN elements RPAREN
    (23) expr -> . ID
    (24) expr -> . STRING
    (25) expr -> . FLOATNUM
    (26) expr -> . INTNUM
    (27) expr -> . LPAREN expr RPAREN
    (28) expr -> . expr DOTDIV expr
    (29) expr -> . expr DOTMUL expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTADD expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr MULTIPLY expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr GREATEROREQUAL expr
    (37) expr -> . expr LESSOREQUAL expr
    (38) expr -> . expr GREATER_THAN expr
    (39) expr -> . expr LESS_THAN expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr EQUAL expr
    (42) expr -> . ID LBRACKET elements RBRACKET
    (48) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 46
    vector                         shift and go to state 30

state 25

    (8) instruction -> IF LPAREN . expr RPAREN instruction ELSE instruction
    (9) instruction -> IF LPAREN . expr RPAREN instruction
    (17) expr -> . expr TRANSPOSE
    (18) expr -> . vector
    (19) expr -> . MINUS expr
    (20) expr -> . ONES LPAREN elements RPAREN
    (21) expr -> . ZEROS LPAREN elements RPAREN
    (22) expr -> . EYE LPAREN elements RPAREN
    (23) expr -> . ID
    (24) expr -> . STRING
    (25) expr -> . FLOATNUM
    (26) expr -> . INTNUM
    (27) expr -> . LPAREN expr RPAREN
    (28) expr -> . expr DOTDIV expr
    (29) expr -> . expr DOTMUL expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTADD expr
    (32) expr -> . expr DIVIDE expr
    (33) expr -> . expr MULTIPLY expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr PLUS expr
    (36) expr -> . expr GREATEROREQUAL expr
    (37) expr -> . expr LESSOREQUAL expr
    (38) expr -> . expr GREATER_THAN expr
    (39) expr -> . expr LESS_THAN expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr EQUAL expr
    (42) expr -> . ID LBRACKET elements RBRACKET
    (48) vector -> . LBRACKET elements RBRACKET
    MINUS           shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 34
    EYE             shift and go to state 35
    ID              shift and go to state 36
    STRING          shift and go to state 37
    FLOATNUM        shift and go to state 38
    INTNUM          shift and go to state 39
    LPAREN          shift and go to state 33
    LBRACKET        shift and go to state 40

    expr                           shift and go to state 47
    vector                         shift and go to state 30

state 26

    (10) instruction -> LBRACE instructions . RBRACE
    (4) instructions -> instructions . instruction
    (5) instruction -> . assignment SEMICOLON
    (6) instruction -> . FOR ID EQUALS expr COLON expr instruction
    (7) instruction -> . WHILE LPAREN expr RPAREN instruction
    (8) instruction -> . IF LPAREN expr RPAREN instruction ELSE instruction
    (9) instruction -> . IF LPAREN expr RPAREN instruction
    (10) instruction -> . LBRACE instructions RBRACE
    (11) instruction -> . CONTINUE SEMICOLON
    (12) instruction -> . BREAK SEMICOLON
    (13) instruction -> . RETURN expr SEMICOLON
    (14) instruction -> . PRINT elements SEMICOLON
    (15) assignment -> . ID LBRACKET elements RBRACKET assign expr
    (16) assignment -> . ID assign expr
    RBRACE          shift and go to state 48
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    LBRACE          shift and go to state 9
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    RETURN          shift and go to state 12
    PRINT           shift and go to state 13
    ID              shift and go to state 6

    instruction                    shift and go to state 14
    assignment                     shift and go to state 4

state 27

    (11) instruction -> CONTINUE SEMICOLON .
    FOR             reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    WHILE           reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    IF              reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    LBRACE          reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    CONTINUE        reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    BREAK           reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    RETURN          reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    PRINT           reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    ID              reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    $end            reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    RBRACE          reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)
    ELSE            reduce using rule 11 (instruction -> CONTINUE SEMICOLON .)


state 28

    (12) instruction -> BREAK SEMICOLON .
    FOR             reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    WHILE           reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    IF              reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    LBRACE          reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    CONTINUE        reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    BREAK           reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    RETURN          reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    PRINT           reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    ID              reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    $end            reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    RBRACE          reduce using rule 12 (instruction -> BREAK SEMICOLON .)
    ELSE            reduce using rule 12 (instruction -> BREAK SEMICOLON .)


state 29

    (13) instruction -> RETURN expr . SEMICOLON
    (17) expr -> expr . TRANSPOSE
    (28) expr -> expr . DOTDIV expr
    (29) expr -> expr . DOTMUL expr
    (30) expr -> expr . DOTSUB expr
    (31) expr -> expr . DOTADD expr
    (32) expr -> expr . DIVIDE expr
    (33) expr -> expr . MULTIPLY expr
    (34) expr -> expr . MINUS expr
    (35) expr -> expr . PLUS expr
    (36) expr -> expr . GREATEROREQUAL expr
    (37) expr -> expr . LESSOREQUAL expr
    (38) expr -> expr . GREATER_THAN expr
    (39) expr -> expr . LESS_THAN expr
    (40) expr -> expr . NOTEQUAL expr
    (41) expr -> expr . EQUAL expr
    SEMICOLON       shift and go to state 49
    TRANSPOSE       shift and go to state 50
    DOTDIV          shift and go to state 51
    DOTMUL          shift and go to state 52
    DOTSUB          shift and go to state 53
    DOTADD          shift and go to state 54
    DIVIDE          shift and go to state 55
    MULTIPLY        shift and go to state 56
    MINUS           shift and go to state 57
    PLUS            shift and go to state 58
    GREATEROREQUAL  shift and go to state 59
    LESSOREQUAL     shift and go to state 60
    GREATER_THAN    shift and go to state 61
    LESS_THAN       shift and go to state 62
    NOTEQUAL        shift and go to state 63
    EQUAL           shift and go to state 64


state 30
